--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700");
+@import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -458,5 +459,235 @@ body {
   line-height: 20px;
   max-height: 40px;
   width: 100%;
+}
+
+.ui_book_slider {
+  height: 330px !important;
+  margin: 0 0 50px 0;
+}
+
+.ui_book_slider * {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.ui_book_slider .kutu {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 550px;
+  height: 300px;
+  position: relative;
+  z-index: -2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(transparent)), -webkit-gradient(linear, left top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.6)));
+  background-image: linear-gradient(to top left, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), transparent), linear-gradient(to bottom right, transparent, rgba(255, 255, 255, 0.6));
+}
+
+.ui_book_slider .kutu .kapak {
+  width: 197.5px;
+  height: 300px;
+  position: relative;
+  top: 30px;
+  left: 30px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.7);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.7);
+}
+
+.ui_book_slider .kutu .sag {
+  padding: 30px 30px 30px 0px;
+  height: 100%;
+  width: calc(100% - 197.5px - 60px);
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.ui_book_slider .kutu .sag .baslik {
+  color: #fff;
+  font-weight: 700;
+  font-family: Quicksand,sans-serif;
+  font-size: 20px;
+  letter-spacing: .8px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
+}
+
+.ui_book_slider .kutu .sag .yazar {
+  color: #fff;
+  font-weight: 300;
+  font-size: 14px;
+  font-family: Quicksand,sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 30px;
+}
+
+.ui_book_slider .kutu .sag .rating_star {
+  position: absolute;
+  left: 0;
+  top: 100px;
+  font-size: 16px;
+  pointer-events: none;
+}
+
+.ui_book_slider .kutu .sag .rating_star span {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.ui_book_slider .kutu .sag .rating_star .checked {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.ui_book_slider .kutu .sag .rating_star .voters {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  padding: 0 0 0 20px;
+}
+
+.ui_book_slider .kutu .sag .aciklama {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 14px;
+  position: absolute;
+  top: 140px;
+  line-height: 20px;
+  max-height: 80px;
+  overflow: hidden;
+}
+
+.ui_book_slider .kutu .sag .buton {
+  width: 80%;
+  height: 30px;
+  background: #fff;
+  color: #444;
+  position: absolute;
+  bottom: 30px;
+  left: 0;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 15px;
+}
+
+.ui_book_slider .kutu .sag .buton::before {
+  content: '';
+  width: 70%;
+  height: 30px;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: -1;
+  position: absolute;
+  bottom: -10px;
+  border-radius: 20px;
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+.ui_book_slider .kutu .sag .buton::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  height: 30px;
+  width: 80%;
+  top: -2px;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  -webkit-filter: blur(5px);
+          filter: blur(5px);
+}
+
+.ui_book_slider .next_btn, .ui_book_slider .prev_btn {
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.8);
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.ui_book_slider .next_btn i, .ui_book_slider .prev_btn i {
+  font-size: 32px;
+}
+
+.tns-nav, button[data-action="stop"] {
+  display: none;
+}
+
+.tns-outer {
+  position: relative;
+}
+
+.tns-controls {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.tns-controls:focus {
+  outline: none;
+}
+
+.tns-controls button:first-child {
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  height: 50px;
+  width: 50px;
+  background: #fff;
+  opacity: .8;
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+}
+
+.tns-controls button:last-child {
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  height: 50px;
+  width: 50px;
+  background: #fff;
+  opacity: .8;
+  -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
 }
 /*# sourceMappingURL=main.css.map */
