--- a/main.scss
+++ b/main.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700');
 
 * {
     box-sizing:border-box;
-    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 $oran_boy:600px;
@@ -402,3 +403,198 @@ body {
         }
     }
 }
+
+.ui_book_slider {
+    height:330px !important;
+    margin:0 0 50px 0;
+
+    * {
+        user-select: none;
+    }
+
+    .kutu {
+        flex-shrink: 0;
+        width: 550px ;
+        height: 300px;
+        position: relative;
+        z-index:-2;
+        display:flex;
+        background-image:linear-gradient(to top left, rgba(0,0,0,.3), rgba(0,0,0,.3),transparent),
+                         linear-gradient(to bottom right,transparent, rgba(255,255,255,.6));
+
+        .kapak {
+            width:$oran_en*0.5;
+            height:$oran_boy*0.5;
+            position: relative;
+            top:30px;
+            left:30px;
+            object-fit:cover;
+            box-shadow: 0 5px 10px rgba(0,0,0,.7);   
+            
+        }
+
+        .sag {
+            padding:30px 30px 30px 0px;
+            height:100%;
+            width: calc(100% - 197.5px - 60px);
+            position: absolute;
+            right: 0;
+            top: 0;
+
+            .baslik {
+                color:#fff;
+                font-weight: 700;
+                font-family: Quicksand,sans-serif;
+                font-size:20px;
+                letter-spacing: .8px;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                width:100%;
+            }
+            .yazar {
+                color:#fff;
+                font-weight:300;
+                font-size:14px;
+                font-family: Quicksand,sans-serif;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                line-height:30px; 
+            }
+            .rating_star {
+                position: absolute;
+                left:0;
+                top:100px;
+                font-size:16px;
+                pointer-events: none;
+
+                span {
+                    color: rgba(255,255,255,.5);
+                }
+                .checked {
+                    color: rgba(0,0,0,.5);
+                }
+                .voters {
+                    color:rgba(255,255,255,.6);
+                    font-size:14px;
+                    padding:0 0 0 20px;
+                }
+            }
+            .aciklama {
+                color:rgba(255,255,255,.8);
+                font-size:14px;
+                position: absolute;
+                top:140px;
+                line-height:20px;
+                max-height:80px;
+                overflow:hidden;
+            }
+            .buton {
+                width:80%;
+                height:30px;
+                background: #fff;
+                color:#444;
+                position: absolute;
+                bottom:30px;
+                left: 0;
+                border-radius: 20px;
+                display:flex;
+                justify-content: center;
+                align-items:center;
+                text-decoration: none;
+                font-weight: 700;
+                font-size:15px;  
+                
+                &::before {
+                    content: '';
+                    width: 70%;
+                    height:30px;
+                    background:rgba(0,0,0,.3);  
+                    z-index:-1;
+                    position: absolute;
+                    bottom:-10px;
+                    border-radius: 20px;
+                    filter:blur(10px);
+                }
+                &::after {
+                    content: '';
+                    position: absolute;
+                    z-index: -1;
+                    height:30px;
+                    width:80%;
+                    top:-2px;
+                    background:rgba(0,0,0,.3); 
+                    border-radius: 20px;
+                    filter:blur(5px);
+
+                }
+            }
+        }
+    }
+
+    .next_btn, .prev_btn {
+        border-radius: 50%;
+        background: rgba(255,255,255,.8);
+        height:50px;
+        width: 50px;
+        position: absolute;
+        z-index: 2;
+        top:50%;
+        transform:translateY(-50%);
+        left: 20px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        
+        i {
+            font-size:32px;
+        }
+    }
+}
+
+.tns-nav, button[data-action="stop"] {
+    display:none;
+}
+
+.tns-outer {
+    position: relative; 
+}
+
+.tns-controls {
+    position: absolute;
+    top:50%;
+    transform:translateY(-50%);
+    z-index: 3;
+    display:flex;
+    justify-content: space-between;
+    width:100%;
+    padding:0 20px;
+
+    &:focus {
+        outline:none;
+    }
+}
+
+.tns-controls button:first-child {
+    border-radius: 50%;
+    outline:none;
+    border:none;
+    height: 50px;
+    width: 50px;
+    background: #fff;
+    opacity:.8;
+    box-shadow:0 0 15px 0 rgba(0,0,0,.5);
+}
+.tns-controls button:last-child {
+    border-radius: 50%;
+    outline:none;
+    border:none;
+    height: 50px;
+    width: 50px;
+    background: #fff;
+    opacity:.8;
+    box-shadow:0 0 15px 0 rgba(0,0,0,.5);
+}
+
