login_signup eklendi

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,9 @@ $oran_en:395px;
 body {
     margin:0;
     padding: 0;
+    transform-origin:top left;
+    transform-style: preserve-3d;
+    perspective: 1000px;
 }
 
 .nav {
@@ -597,4 +600,6 @@ body {
     opacity:.8;
     box-shadow:0 0 15px 0 rgba(0,0,0,.5);
 }
+
+
 
