--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,12 @@
 body {
   margin: 0;
   padding: 0;
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
 }
 
 .nav {
