--- a/css/okuma.scss
+++ b/css/okuma.scss
@@ -78,7 +78,7 @@ html, body {
         opacity:.5;
 
         i {
-            margin:0 10px;
+            margin:0 20px 0 0;
             cursor: pointer;
         }
     }
