--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,6 @@
 body {
   margin: 0;
   padding: 0;
-  -webkit-transform-origin: top left;
-          transform-origin: top left;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-perspective: 1000px;
-          perspective: 1000px;
 }
 
 .nav {
@@ -695,5 +689,155 @@ body {
   opacity: .8;
   -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+}
+
+.arka_golge {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 98;
+  display: none;
+}
+
+.modal {
+  position: fixed;
+  z-index: 99;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 670px;
+  height: 450px;
+  background: #fff;
+  -webkit-box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
+  font-family: Quicksand,sans-serif;
+  display: none;
+}
+
+.modal .kapak {
+  position: absolute;
+  width: 197.5px;
+  height: 300px;
+  left: -98.75px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 55;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.modal .kapak:nth-child(2) {
+  -webkit-filter: blur(60px);
+          filter: blur(60px);
+  z-index: 54;
+}
+
+.modal .kapat {
+  position: absolute;
+  padding: 5px 10px;
+  -webkit-box-shadow: -3px 3px 10px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: -3px 3px 10px 0 rgba(0, 0, 0, 0.2);
+  right: 0;
+  top: 0;
+  font-family: Quicksand,sans-serif;
+  color: #444;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.modal .baslik {
+  font-size: 36px;
+  line-height: 40px;
+  font-family: Quicksand,sans-serif;
+  font-weight: 500;
+  width: 511.25px;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  height: 80px;
+}
+
+.modal .yazi {
+  font-size: 15px;
+  line-height: 22px;
+  font-family: Quicksand,sans-serif;
+  position: absolute;
+  width: 511.25px;
+  right: 30px;
+  top: 130px;
+  height: 242px;
+  overflow: hidden;
+}
+
+.modal a.buton1 {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 20px;
+  font-family: Quicksand,sans-serif;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  width: 150px;
+  border-radius: 30px;
+  position: absolute;
+  bottom: 15px;
+  left: 128.75px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF756E), to(#FF756E));
+  background: linear-gradient(#FF756E, #FF756E);
+  -webkit-box-shadow: inset 0 -8px 30px 0px #D24C45, inset 0 1px 3px 0 #fff;
+          box-shadow: inset 0 -8px 30px 0px #D24C45, inset 0 1px 3px 0 #fff;
+}
+
+.modal a.buton1:hover {
+  -webkit-box-shadow: inset 0 8px 30px 0px #D24C45, inset 0 1px 3px 0 #fff;
+          box-shadow: inset 0 8px 30px 0px #D24C45, inset 0 1px 3px 0 #fff;
+}
+
+.modal a.buton2 {
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 20px;
+  font-family: Quicksand,sans-serif;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  padding: 0 20px;
+  position: absolute;
+  bottom: 15px;
+  left: 308.75px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  background: transparent;
+  color: #FF756E;
+  border: 2px solid #FF756E;
+  border-radius: 30px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.modal a.buton2:hover {
+  background: #FF756E;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
