--- a/css/main.scss
+++ b/css/main.scss
@@ -12,9 +12,6 @@ $oran_en:395px;
 body {
     margin:0;
     padding: 0;
-    transform-origin:top left;
-    transform-style: preserve-3d;
-    perspective: 1000px;
 }
 
 .nav {
@@ -601,5 +598,133 @@ body {
     box-shadow:0 0 15px 0 rgba(0,0,0,.5);
 }
 
+.arka_golge {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top:0;
+    background: rgba(0,0,0,.3);
+    z-index: 98;
+    display:none;
+}
+.modal {
+    position: fixed;
+    z-index: 99;
+    left:50%;
+    top:50%;
+    transform:translate(-50%,-50%);
+    width:670px;
+    height:450px;
+    background: #fff;
+    box-shadow: 0 0 30px 0 rgba(0,0,0,.3);
+    font-family: Quicksand,sans-serif;
+    display:none;
+
+    .kapak {
+        position: absolute;
+        width:$oran_en*.5;
+        height:$oran_boy*.5;
+        left:#{$oran_en * -.5 * .5};
+        top:50%;
+        transform:translateY(-50%);
+        z-index: 55;
+        user-select: none;
+
+        &:nth-child(2){
+            filter:blur(60px);
+            z-index: 54;
+
+        }
+    }
+
+    .kapat {
+        position: absolute;
+        padding:5px 10px;
+        box-shadow:-3px 3px 10px 0 rgba(0,0,0,.2);
+        right:0;
+        top:0;
+        font-family: Quicksand,sans-serif;
+        color:#444;
+        cursor: pointer;
+        font-size:14px;
+        user-select: none;
+    }
+
+    .baslik {
+        font-size:36px;
+        line-height: 40px;
+        font-family: Quicksand,sans-serif;
+        font-weight: 500;
+        width:#{670 + ($oran_en * -.5 * .5) - 60};
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        height:80px;
+    }
+
+    .yazi {
+        font-size:15px;
+        line-height: 22px;
+        font-family: Quicksand,sans-serif;
+        position: absolute;
+        width:#{670 + ($oran_en * -.5 * .5) - 60};
+        right:30px;
+        top:130px;
+        // 11 satır olacak 22*11 = 198
+        height:242px;
+        overflow: hidden;
+    }
+    a.buton1 {
+        text-decoration: none;
+        color:#fff;
+        font-weight: 700;
+        font-size:20px;
+        font-family: Quicksand,sans-serif;
+        height:50px;
+        line-height: 50px;
+        text-align: center;
+        width:150px;
+        border-radius: 30px;
+        position: absolute;
+        bottom: 15px;
+        left:#{$oran_en * .5 *.5 + 30};
+        transition:.3s;
+        user-select: none;
+        background: linear-gradient(#FF756E,#FF756E);
+        box-shadow: inset 0 -8px 30px 0px #D24C45,
+                    inset 0 1px 3px 0 #fff;
+
+        &:hover {
+            box-shadow: inset 0 8px 30px 0px #D24C45,
+            inset 0 1px 3px 0 #fff;
+        }  
+    }
+    a.buton2 {
+        display: inline-block;
+        text-decoration: none;
+        font-weight: 700;
+        font-size:20px;
+        font-family: Quicksand,sans-serif;
+        height:50px;
+        line-height: 50px;
+        text-align: center;
+        padding:0 20px;
+        position: absolute;
+        bottom: 15px;
+        left:#{$oran_en * .5 *.5 + 30 + 180};
+        transition:.3s;
+        background: transparent;
+        color:#FF756E;
+        border:2px solid #FF756E;
+        border-radius:30px;
+        user-select: none;
+
+        &:hover {
+            background: #FF756E;
+            color:#fff;
+        }
+    }
+}
 
 
