arama çubuğu ve menü eklendi

--- a/css/main.css
+++ b/css/main.css
@@ -31,23 +31,96 @@ body {
   line-height: 50px;
 }
 
-.nav div:nth-child(2) {
+.nav label {
+  position: absolute;
+  top: 0;
+  right: 70px;
+  z-index: 3;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: none;
+}
+
+.nav label input[type="text"] {
+  width: 400px;
+  height: 37px;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  line-height: 37px;
+  color: #444;
+  background: #F2F3F7;
+  border-radius: 10px;
+  padding: 0 49px 0 40px;
+  font-family: Quicksand,sans-serif;
+  font-weight: 400;
+  z-index: 5;
+}
+
+.nav label input[type="text"]::-webkit-input-placeholder {
+  font-weight: 300;
+}
+
+.nav label input[type="text"]:-ms-input-placeholder {
+  font-weight: 300;
+}
+
+.nav label input[type="text"]::-ms-input-placeholder {
+  font-weight: 300;
+}
+
+.nav label input[type="text"]::placeholder {
+  font-weight: 300;
+}
+
+.nav label .arama_icon {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  color: rgba(0, 0, 0, 0.4);
+  width: 30px;
+  height: 37px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: default;
 }
 
-.nav div:nth-child(2) i {
+.nav label .kapat {
+  color: #444;
+  font-size: 14px;
+  cursor: pointer;
+  font-family: Quicksand,sans-serif;
+}
+
+.nav i {
   line-height: 50px;
   font-size: 22px;
   cursor: pointer;
+  display: inline-block;
+  position: absolute;
+  right: 70px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
-.nav div:nth-child(2) i:nth-child(1) {
-  margin: 0 30px 0 0;
+.nav .search_icon {
+  right: 110px;
 }
 
 .icerik {
@@ -506,6 +579,24 @@ body {
   position: absolute;
   right: 0;
   top: 0;
+  --bg-image:1;
+  overflow: hidden;
+}
+
+.ui_book_slider .kutu .sag::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: var(--bg-image);
+  background-size: cover;
+  background-position: center top;
+  -webkit-filter: blur(50px);
+          filter: blur(50px);
+  z-index: -1;
+  overflow: hidden;
 }
 
 .ui_book_slider .kutu .sag .baslik {
@@ -839,5 +930,140 @@ body {
 .modal a.buton2:hover {
   background: #FF756E;
   color: #fff;
+}
+
+.side_menu {
+  position: fixed;
+  height: 100vh;
+  width: 300px;
+  left: 0;
+  top: 0;
+  background: hotpink;
+  z-index: 99;
+  -webkit-box-shadow: -5px 0 120px 0 rgba(0, 0, 0, 0.4);
+          box-shadow: -5px 0 120px 0 rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
+.side_menu .baslik {
+  color: #fff;
+  font-weight: 600;
+  font-size: 40px;
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  font-family: Quicksand,sans-serif;
+  font-weight: 500;
+}
+
+.side_menu .linkler {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.side_menu .linkler a {
+  display: inline-block;
+  padding: 0 0 0px 40px;
+  color: #fff;
+  text-decoration: none;
+  line-height: 50px;
+  height: 50px;
+  font-family: Quicksand,sans-serif;
+  font-weight: 500;
+}
+
+.side_menu .linkler a:nth-child(3), .side_menu .linkler a:nth-child(6) {
+  padding: 0 0 75px 40px;
+}
+
+.side_menu .linkler a:last-child {
+  padding: 0 0 0 40px;
+}
+
+.side_menu .linkler a:nth-child(1):hover ~ .cizgi {
+  top: 0px !important;
+}
+
+.side_menu .linkler a:nth-child(2):hover ~ .cizgi {
+  top: 50px !important;
+}
+
+.side_menu .linkler a:nth-child(3):hover ~ .cizgi {
+  top: 100px !important;
+}
+
+.side_menu .linkler a:nth-child(4):hover ~ .cizgi {
+  top: 175px !important;
+}
+
+.side_menu .linkler a:nth-child(5):hover ~ .cizgi {
+  top: 225px !important;
+}
+
+.side_menu .linkler a:nth-child(6):hover ~ .cizgi {
+  top: 275px !important;
+}
+
+.side_menu .linkler a:nth-child(7):hover ~ .cizgi {
+  top: 350px !important;
+}
+
+.side_menu .linkler .cizgi {
+  width: 5px;
+  height: 50px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.side_menu .profil {
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
+  color: #fff;
+  width: 100%;
+  height: 50px;
+  font-size: 14px;
+}
+
+.side_menu .profil img {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.side_menu .profil span {
+  display: inline-block;
+  position: absolute;
+  left: 50px;
+  top: 0px;
+  line-height: 50px;
+  height: 50px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  font-family: Roboto;
+  font-weight: 300;
+  letter-spacing: .7px;
 }
 /*# sourceMappingURL=main.css.map */
