--- a/css/kitap_sayfasi.css
+++ b/css/kitap_sayfasi.css
@@ -209,12 +209,145 @@ body {
   line-height: 32px;
   font-size: 18px;
   color: #444;
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  top: 370px;
+  margin: 370px auto 0;
   border-radius: 40px;
   text-align: justify;
+}
+
+h2 {
+  width: calc(100% - 140px);
+  padding: 0 0px 25px;
+  margin: 50px 70px 25px;
+  border-bottom: 2px solid transparent;
+  -o-border-image: linear-gradient(to right, transparent, #e0e0e0, #e0e0e0, #e0e0e0, transparent) 1;
+     border-image: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(#e0e0e0), color-stop(#e0e0e0), color-stop(#e0e0e0), to(transparent)) 1;
+     border-image: linear-gradient(to right, transparent, #e0e0e0, #e0e0e0, #e0e0e0, transparent) 1;
+}
+
+.onerilen_kitaplar {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 70px;
+  margin: 0 0 50px 0;
+}
+
+.onerilen_kitaplar .kitap_cont {
+  width: 118.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
+
+.onerilen_kitaplar .kitap_cont .kapak {
+  width: 118.5px;
+  height: 180px;
+}
+
+.onerilen_kitaplar .kitap_cont .abs_img {
+  width: 108.5px;
+  height: 170px;
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  z-index: -1;
+}
+
+.onerilen_kitaplar .kitap_cont .baslik {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 20px;
+  max-height: 40px;
+  overflow: hidden;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.onerilen_kitaplar .kitap_cont a {
+  text-decoration: none;
+  color: #000;
+}
+
+.onerilen_kitaplar .kitap_cont a:hover .abs_img {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+.onerilen_kitaplar .kitap_cont a:hover .baslik {
+  text-shadow: 0 0 5px #a0a0a0;
+}
+
+.onerilen_yazarlar {
+  width: 100%;
+  padding: 0 70px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (200px)[4];
+      grid-template-columns: repeat(4, 200px);
+  grid-auto-flow: row;
+  grid-auto-rows: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 0 50px 0;
+}
+
+.onerilen_yazarlar .yazar_cont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 200px;
+  height: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.onerilen_yazarlar .yazar_cont .yazar_resim {
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  margin: 0 20px 0 0;
+  display: block;
+}
+
+.onerilen_yazarlar .yazar_cont .yazar_isim {
+  text-decoration: none;
+  color: #000;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.onerilen_yazarlar .yazar_cont:hover > .yazar_isim {
+  color: gray;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background: #e0e0e0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=kitap_sayfasi.css.map */
