--- a/css/kitap_sayfasi.scss
+++ b/css/kitap_sayfasi.scss
@@ -195,10 +195,108 @@ $oran_boy:600px;
     line-height:32px;
     font-size:18px;
     color:#444;
-    position: absolute;
-    left: 50%;
-    transform:translateX(-50%);
-    top:370px;
+    margin:370px auto 0;
     border-radius: 40px;
     text-align: justify;
+}
+
+h2 {
+    width:calc(100% - 140px);
+    padding:0 0px 25px;
+    margin:50px 70px 25px;
+    border-bottom:2px solid transparent;
+    border-image: linear-gradient(to right, transparent, #e0e0e0, #e0e0e0, #e0e0e0, transparent) 1;
+}
+
+.onerilen_kitaplar {
+    width:100%;
+    display:flex;
+    justify-content: space-between;
+    padding:0 70px;
+    margin:0 0 50px 0;
+
+    .kitap_cont {
+        width:$oran_en*.3;
+        display:flex;
+        flex-direction: column;
+        position: relative;
+
+        .kapak {
+            width:$oran_en*.3;
+            height:$oran_boy*.3;
+        }
+        .abs_img {
+            width:$oran_en*.3 - 10px;
+            height:$oran_boy*.3 - 10px;
+            position: absolute;
+            left:5px;
+            top:5px;
+            transition:.3s;
+            z-index: -1;
+        }
+        .baslik {
+            font-weight: 600;
+            font-size:15px;
+            line-height: 20px;
+            max-height:40px;
+            overflow: hidden;
+            transition:.3s;
+        }
+        a {
+            text-decoration: none;
+            color:#000;
+
+            &:hover .abs_img {
+                filter:blur(10px);
+            }
+            &:hover .baslik {
+                text-shadow: 0 0 5px #a0a0a0;
+            }
+        }
+    }
+}
+
+.onerilen_yazarlar {
+    width:100%;
+    padding:0 70px;
+    display:grid;
+    grid-template-columns: repeat(4,200px);
+    grid-auto-flow: row;
+    grid-auto-rows:50px;
+    align-items: center;
+    justify-content: space-between;
+    margin:0 0 50px 0;
+
+    .yazar_cont {
+        display:flex;
+        width:200px;
+        height:50px;
+        align-items:center;
+
+        .yazar_resim {
+            border-radius: 50%;
+            height: 30px;
+            width: 30px;
+            margin:0 20px 0 0;
+            display:block;
+        }
+        .yazar_isim {
+            text-decoration: none;
+            color:#000;
+            transition:.3s;
+        }
+
+        &:hover > .yazar_isim {
+            color:lighten(#000, 50%);
+        }
+    } 
+}
+
+footer {
+    width:100%;
+    height:50px;
+    background: #e0e0e0;
+    display: flex;
+    justify-content: center;
+    align-items:center;
 }
